--- a/p2-project/src/index.css
+++ b/p2-project/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.side-by-side {
+  display: inline-flex;
+}
+
+.favorites {
+  width: 40%;
+}
+
+.bordered {
+  border-style: solid;
+}
