Got Player DEtails

--- a/p2-project/src/index.css
+++ b/p2-project/src/index.css
@@ -16,12 +16,13 @@ code {
   display: inline-flex;
 }
 
-.favorites {
+/* .favorites {
   width: 40%;
-}
+} */
 
 .bordered {
   border-style: solid;
+  width: 4000;
 }
 
 .float-left {
